CSS/main.css
html{
    background: #999999;
}
body {
    margin-left: 5vw;
    margin-right: 5vw;
}
.jumbotron {
    background: url(../IMG/background.jpg);
    background-size: cover;
    margin-left: 1.2vw;
    padding-bottom: 0;
    height: 80vh;
    width: 90vw;
    border-radius: 0;
}
#time {
    margin-right: 2vw;
    color: white;
    text-align: right;
    font-size: 20px;
    font-family: 'Mina', sans-serif;
}
.border {
    margin-top: 19vh;
    border: 10px solid white;
    font-size: 40px;
    color: white;
    text-align: center;
    display: inline-block;
}
.version {
    color: white
}

.diary {
    margin-top: 3px;
    width: 90vw;
    background-color: white;
    display: block;
    height: 100vh;
    overflow-y: scroll;
}

#content {
    padding-top: 20px;
    padding-bottom: 20px;
    padding-left: 40px;
    padding-right: 40px;
}
*:focus {
    outline: none;
}
#date {
    text-align: right;
    margin-right: 40px;
    color: gray;
    opacity: 80%;
}

